# speech_to_gpt

./: .gitignore  README.md  air_llm_poc.py  conda-lock.yml  environment.yml  pyproject.toml  requirements.txt
flutter/: README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
speech_to_gpt/: __init__.py  app.py  authenticator.py  constants.py  main.py
speech_to_gpt/api/: __init__.py  authenticator.py  chat.py
speech_to_gpt/db/: __init__.py  db_init.py  errors.py  recepies_db.py  user_db.py
speech_to_gpt/llms/: action_finder.py  chat_types.py  context_creator.py  friend.py  image_analyzer.py  open_ai_client.py  text_to_speech_manager.py
speech_to_gpt/llms/actions/: search_online.py
speech_to_gpt/llms/agents/: promt_engineer
speech_to_gpt/static/: speech_to_text.html
speech_to_gpt/utils/: audio.py  measure.py
stgp-flutter/speech_to_gpt/: 000.json  README.md  pubspec.yaml
stgp-flutter/speech_to_gpt/linux/: CMakeLists.txt  my_application.cc
stgp-flutter/speech_to_gpt/web/: index.html  manifest.json
stgp-flutter/speech_to_gpt/windows/: CMakeLists.txt
ui/: .gitignore  capacitor.config.ts  package-lock.json  package.json
ui/src/: main.ts
ui/src/app/: app.component.html  app.component.ts  app.routes.ts
ui/www/: 3rdpartylicenses.txt  402.8928f642aee999e4.js  444.a8f6c9439b9e0d4f.js  510.107c45ee6265f2bb.js  631.212b217b2250ea69.js  index.html  main.22c9f23d1dce8646.js  runtime.39739448ee457585.js
(+22 files in other folders)
